Change coordinate system in the float manager from content box (most of the time, but sometimes border box) to always border box.  (Bug 551425)  r=dbaron  a2.0=blocking+